--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "eslint": "^8.39.0",
+    "file-loader": "^6.2.0",
     "goji_ui": "^1.0.8",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -70,6 +71,7 @@
     "tslib": "^2.5.0",
     "typedoc": "^0.24.6",
     "typescript": "^4.9.5",
+    "url-loader": "^4.1.1",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
     "vue-template-compiler": "^2.7.14",
